--- a/css_knowbase.css
+++ b/css_knowbase.css
@@ -922,6 +922,7 @@ body {
     background-color: #FFFFFF;
     border: none;
     height: 70px;
+    width:100%;
     margin-bottom: 0;
     border-bottom: 3px solid #B5121B;
 }
