--- a/css_knowbase.css
+++ b/css_knowbase.css
@@ -886,12 +886,12 @@ body {
 
 .btn.btn-green:hover {
     background-color: #34a052;
-    transition: all .2 ease-in-out;
-    -webkit-webkit: transition all .2 ease-in-out;
-    -moz-webkit: transition all .2 ease-in-out;
-    -ms-webkit: transition all .2 ease-in-out;
-    -o-webkit: transition all .2 ease-in-out;
-    webkit: transition all .2 ease-in-out;
+    transition: all .3 ease-in-out;
+    -webkit-webkit: transition all .3 ease-in-out;
+    -moz-webkit: transition all .3 ease-in-out;
+    -ms-webkit: transition all .3 ease-in-out;
+    -o-webkit: transition all .3 ease-in-out;
+    webkit: transition all .3 ease-in-out;
 }
 
 @media (min-width:1200px) {
@@ -1084,7 +1084,7 @@ body {
 }
 
 .box__main {
-    background-color: #f7f7f7;
+    background-color: #E9EAE5;
     width: 100%;
     padding-top: 60px;
     padding-bottom: 60px
@@ -1151,7 +1151,7 @@ body {
 }
 
 footer {
-    background-color: #F8F8F8
+    background-color: #E9EAE5
 }
 
 footer .box__artigos {
