--- a/base_conhecimento_operacional.css
+++ b/base_conhecimento_operacional.css
@@ -991,7 +991,7 @@ body {
     no-repeat, 
       no-repeat;
     
-    background-position: 
+/*    background-position: 
     right 150px, 
       center;
     
@@ -1000,7 +1000,7 @@ body {
       auto;
 
     width: 100%;
-    height: 51vh;
+    height: 51vh;*/
 }
 
 @media (max-width:767px) {
